# CPPMicroservice

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
base/: CMakeLists.txt
base/inc/: IService.ixx
framework/: CMakeLists.txt
framework/inc/: SharedLib.ixx
services/: CMakeLists.txt
services/serviceA/: CMakeLists.txt
services/serviceA/inc/: ServiceA_Module.ixx
services/serviceA/src/: ServiceA_Impl.cpp
